--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -956,9 +956,9 @@ section {
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 90px;
+  width: 140px;
   border-radius: 50%;
-  border: 4px solid #fff;
+  border: 4px solid rgb(206, 62, 62);
   margin: 0 auto;
 }
 
